// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-2.emotion-2 {
  display: block;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.emotion-5.emotion-5 {
  margin-right: 4px;
}

.emotion-5:hover .emotion-6,
.emotion-5:focus .emotion-6 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.emotion-5:hover .emotion-6>.emotion-8,
.emotion-5:focus .emotion-6>.emotion-8 {
  fill: #4f0599;
}

.emotion-7 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-10 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-10.emotion-10 {
  vertical-align: middle;
}

.emotion-12 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-12.emotion-12 {
  color: #151a2d;
}

.emotion-13 {
  position: absolute;
  opacity: 0.01;
}

.emotion-15.emotion-15 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        for="radio-choice"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <svg
            class="emotion-8 emotion-9 emotion-10"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          class="emotion-13 emotion-14"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-15"
      />
    </div>
    <div
      class="emotion-16"
    >
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.emotion-2.emotion-2 {
  display: block;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.emotion-5.emotion-5 {
  margin-right: 4px;
}

.emotion-5:hover .emotion-6,
.emotion-5:focus .emotion-6 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.emotion-5:hover .emotion-6>.emotion-8,
.emotion-5:focus .emotion-6>.emotion-8 {
  fill: #4f0599;
}

.emotion-7 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-10 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-10.emotion-10 {
  vertical-align: middle;
}

.emotion-12 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-12.emotion-12 {
  color: #151a2d;
}

.emotion-13 {
  position: absolute;
  opacity: 0.01;
}

.emotion-15.emotion-15 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        for="radio-choice"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <svg
            class="emotion-8 emotion-9 emotion-10"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          Choice
        </div>
        <input
          aria-checked="true"
          checked=""
          class="emotion-13 emotion-14"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-15"
      />
    </div>
    <div
      class="emotion-16"
    >
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.emotion-2.emotion-2 {
  display: block;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.emotion-5.emotion-5 {
  margin-right: 4px;
}

.emotion-7 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-10 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-10.emotion-10 {
  vertical-align: middle;
}

.emotion-12 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-12.emotion-12 {
  color: #151a2d;
}

.emotion-13 {
  position: absolute;
  opacity: 0.01;
}

.emotion-15.emotion-15 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
    disabled=""
  >
    <div
      class="emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        disabled=""
        for="radio-choice"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <svg
            class="emotion-8 emotion-9 emotion-10"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          aria-disabled="true"
          class="emotion-13 emotion-14"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-15"
      />
    </div>
    <div
      class="emotion-16"
    >
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`Radio renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .emotion-2 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.emotion-2.emotion-2 {
  display: block;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.emotion-5.emotion-5 {
  margin-right: 4px;
}

.emotion-7 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-10 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-10.emotion-10 {
  vertical-align: middle;
}

.emotion-12 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-12.emotion-12 {
  color: #151a2d;
}

.emotion-13 {
  position: absolute;
  opacity: 0.01;
}

.emotion-15.emotion-15 {
  margin-right: 8px;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
    disabled=""
  >
    <div
      class="emotion-3"
    >
      <label
        class="emotion-4 emotion-5"
        disabled=""
        for="radio-choice"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <svg
            class="emotion-8 emotion-9 emotion-10"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          aria-disabled="true"
          class="emotion-13 emotion-14"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-15"
      >
        (something)
      </span>
      <span
        class="emotion-16 emotion-17"
      >
        Badge
      </span>
    </div>
    <div
      class="emotion-18"
    >
      Choice description
    </div>
  </label>
</DocumentFragment>
`;
